--- a/index.html
+++ b/index.html
@@ -15,15 +15,18 @@
     <!-- Header and main image -->
     <h1 class ="title" align="center"> Senior Opportunities </h1>
     <img src="images/home_image.jpg" class="img-fluid" alt="Home Page Graphic"/>
-    <p> <h4> Giving senior citizens more ways to give back. </h4> </p>
+    <p> <center>
+        <h4> Giving senior citizens more ways to give back. </h4>
+    </center> </p>
   </div>
 
   <div class =".navbar">
     <!-- Navigation links -->
-    <li> <a href="/volunteer_opportunities" alt="Volunteer Opportunties">
+    <center>
+    <a class="button" href="/volunteer_opportunities" alt="Volunteer Opportunties">
       Volunteer Opportuntities </a></li>
-    <li> <a href="/job_opportunities" alt="Job Opportunities">
+    <a class="button" href="/job_opportunities" alt="Job Opportunities">
        Job Opportunities </a></li>
-    <a href="">
+    </center>
   </div>
 </body>
