--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class =".navbar">
     <!-- Navigation links -->
     <center>
-    <a class="button" href="/volunteer_opportunities" alt="Volunteer Opportunties">
+    <a class="button" href="volunteerSearch.html" alt="Volunteer Opportunties">
       Volunteer Opportuntities </a></li>
     <a class="button" href="/job_opportunities" alt="Job Opportunities">
        Job Opportunities </a></li>
