Update and rename Submission.html to JobSubmission.html

--- a/JobSubmission.html
+++ b/JobSubmission.html
@@ -19,12 +19,12 @@
       <h3> XXX Company wil get back to you as soon as possible!</h3>
       <hr/>
       <div class="button">
-        <button type="submit" class="btn btn-primary btn-large" href = "MoreInfo.html">Back</button>
+        <button type="submit" class="btn btn-primary btn-large" href = "JobInfo.html">Back</button>
       </div>
       <br>
 
       <div class="button">
-        <button type="submit" class="btn btn-outline-primary btn-large" id="allListings">See All Listings</button>
+        <button type="submit" class="btn btn-outline-primary btn-large" id="JobListings">See All Listings</button>
       </div>
       <br>
 
