--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <center>
     <a class="button" href="volunteerSearch.html" alt="Volunteer Opportunties">
       Volunteer Opportuntities </a></li>
-    <a class="button" href="/JobSearch.html" alt="Job Opportunities">
+    <a class="button" href="JobSearch.html" alt="Job Opportunities">
        Job Opportunities </a></li>
     </center>
   </div>
