--- a/JobSearch.html
+++ b/JobSearch.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Job Search</title>
+    <title>Job Opportunities</title>
     <!--
     <link rel="stylesheet" type="text/css" href="css/JobSearch.css">
     -->
@@ -20,12 +20,12 @@
 
       <hr/>
       <div class="button">
-        <button type="submit" class="btn btn-primary btn-large" href = "index.html">Back</button>
+        <button class="btn btn-primary btn-large" href = "index.html">Back</button>
       </div>
       <br>
 
       <div class="button">
-        <button type="submit" class="btn btn-outline-primary btn-large" id="JobResults">Submit!</button>
+        <button type="submit" class="btn btn-outline-primary btn-large" href="JobResults.html">Submit!</button>
       </div>
       <br>
 
