--- a/JobSearch.html
+++ b/JobSearch.html
@@ -25,7 +25,7 @@
       <br>
 
       <div class="button">
-        <button class="btn btn-outline-primary btn-large" href="JobResults.html">Submit!</button>
+        <button class="btn btn-outline-primary btn-large" href="jobResults.html">Submit!</button>
       </div>
       <br>
 
