cries this better work

--- a/JobSearch.html
+++ b/JobSearch.html
@@ -20,12 +20,12 @@
 
       <hr/>
       <div class="button">
-        <button class="btn btn-primary btn-large" href = "index.html">Back</button>
+        <a button class="btn btn-primary btn-large" href = "index.html">Back</button>
       </div>
       <br>
 
       <div class="button">
-        <button class="btn btn-outline-primary btn-large" href="jobResults.html">Submit!</button>
+        <a button class="btn btn-outline-primary btn-large" href="jobResults.html">Submit!</button>
       </div>
       <br>
 
