--- a/jobResults.html
+++ b/jobResults.html
@@ -15,8 +15,9 @@
         <hr/>
       </div>
       <br>
-
     </center>
+
+  <!--Sort by menu -->
     <div class="dropdown">
       <button onclick="myFunction()" class="dropbtn">Sort By</button>
       <div id="myDropdown" class="dropdown-content">
@@ -28,18 +29,21 @@
 
     <center>
       <hr/>
+      <!--More Info -->
       <div class="button">
-        <button class="btn btn-primary btn-large" href = "jobInfo.html">More Info</button>
+        <a button class="btn btn-primary btn-large" href = "jobInfo.html">More Info</button>
       </div>
       <br>
 
+      <!--Contact -->
       <div class="button">
-        <button class="btn btn-primary btn-large" href = "jobContact.html">Contact</button>
+        <a button class="btn btn-primary btn-large" href = "jobContact.html">Contact</button>
       </div>
       <br>
 
+      <!--Back to jobSearch -->
       <div class="button">
-        <button class="btn btn-outline-primary btn-large" href="index.html">Back!</button>
+        <a button class="btn btn-outline-primary btn-large" href="jobSearch.html">Back!</button>
       </div>
       <br>
 
