--- a/JobSubmission.html
+++ b/JobSubmission.html
@@ -19,17 +19,17 @@
       <h3> XXX Company wil get back to you as soon as possible!</h3>
       <hr/>
       <div class="button">
-        <button type="submit" class="btn btn-primary btn-large" href = "JobInfo.html">Back</button>
+        <a button type="submit" class="btn btn-primary btn-large" href = "jobInfo.html">Back</button>
       </div>
       <br>
 
       <div class="button">
-        <button type="submit" class="btn btn-outline-primary btn-large" id="JobListings">See All Listings</button>
+        <a button type="submit" class="btn btn-outline-primary btn-large" href="jobResults.html">See All Listings</button>
       </div>
       <br>
 
       <div class="button">
-        <button type="submit" class="btn btn-primary btn-large" href="index.html">Home  </button>
+        <a button type="submit" class="btn btn-primary btn-large" href="index.html">Home  </button>
       </div>
       <br>
 
