--- a/jobResults.html
+++ b/jobResults.html
@@ -43,7 +43,7 @@
 
       <!--Back to jobSearch -->
       <div class="button">
-        <a button class="btn btn-outline-primary btn-large" href="jobSearch.html">Back!</button>
+        <a button class="btn btn-outline-primary btn-large" href="jobSearch.html">Back</button>
       </div>
       <br>
 
