--- a/jobContact.html
+++ b/jobContact.html
@@ -27,7 +27,7 @@
 
       <!-- Submit Message -->
       <div class="button">
-        <a button class="btn btn-outline-primary btn-large" href="jobSubmission.html">Submit!</button>
+        <a button class="btn btn-outline-primary btn-large" href="JobSubmission.html">Submit!</button>
       </div>
       <br>
 
