--- a/volunteerSearch.html
+++ b/volunteerSearch.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Volunteer Opportunities</title>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="css/volunteerOpp.css">
+  <link rel="stylesheet" type="text/css" href="css/volunteerSearch.css">
 </head>
 
 <body>
@@ -91,6 +91,6 @@
   </div>
   <br>
   <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="js/volunteerOpp.js"></script>
+  <script type="text/javascript" src="js/volunteerSearch.js"></script>
 </body>
 </html>
