--- a/jobInfo.html
+++ b/jobInfo.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>XXX Postion @ XXX Company</title>
     <!--
-    <link rel="stylesheet" type="text/css" href="css/jobContact.css">
+    <link rel="stylesheet" type="text/css" href="css/jobInfo.css">
     -->
   </head>
 
