--- a/VolunteerSubmission.html
+++ b/VolunteerSubmission.html
@@ -19,17 +19,17 @@
       <h3> XXX Organization wil get back to you as soon as possible!</h3>
       <hr/>
       <div class="button">
-        <button type="submit" class="btn btn-primary btn-large" href = "VolunteerInfo.html">Back</button>
+        <a button class="btn btn-primary btn-large" href = "volInfo.html">Back to Event Listing</button>
       </div>
       <br>
 
       <div class="button">
-        <button type="submit" class="btn btn-outline-primary btn-large" id="VolunterListings">See All Listings</button>
+        <a button class="btn btn-outline-primary btn-large" href="volResults.html">See All Listings</button>
       </div>
       <br>
 
       <div class="button">
-        <button type="submit" class="btn btn-primary btn-large" href="index.html">Home  </button>
+        <a button class="btn btn-primary btn-large" href="index.html">Home  </button>
       </div>
       <br>
 
