--- a/jobResults.html
+++ b/jobResults.html
@@ -17,7 +17,9 @@
       <br>
     </center>
 
-  <!--Sort by menu -->
+  <!--Sort by menu
+      Taken from w3schools example of how to do drop down menu
+      https://www.w3schools.com/howto/howto_js_dropdown.asp-->
     <div class="dropdown">
       <button onclick="myFunction()" class="dropbtn">Sort By</button>
       <div id="myDropdown" class="dropdown-content">
