--- a/index.html
+++ b/index.html
@@ -13,20 +13,29 @@
 <body>
   <div class ="container">
     <!-- Header and main image -->
-    <h1 class ="title" align="center"> Senior Opportunities </h1>
-    <img src="images/home_image.jpg" class="img-fluid" alt="Home Page Graphic"/>
-    <p> <center>
+    <h1 class ="title"> Senior Opportunities </h1>
+    <a class="button" id="signUpBtn" href="signUp.html" alt="Sign Up">
+      Sign Up</a>
+      <a class="button" id="loginBtn" href="login.html" alt="Login">
+      Login</a>
+    <p>
         <h4> Giving senior citizens more ways to give back. </h4>
-    </center> </p>
+    </p>
   </div>
-
-  <div class =".navbar">
+  <div class="oppContainer">
     <!-- Navigation links -->
     <center>
-    <a class="button" href="volunteerSearch.html" alt="Volunteer Opportunties">
+      <a class="button" href="volunteerSearch.html" alt="Volunteer Opportunties">
       Volunteer Opportuntities </a></li>
-    <a class="button" href="JobSearch.html" alt="Job Opportunities">
+      <a class="button" href="JobSearch.html" alt="Job Opportunities">
        Job Opportunities </a></li>
     </center>
   </div>
+  <div class="employeerContainer">
+    <center>
+      <a class="button" id="employerBtn" href="employerSubmit.html" alt="Employer? Click here.">
+        Employer?<br/>Click here.</a>
+    </center>
+  </div>
 </body>
+
