--- a/volunteerSearch.html
+++ b/volunteerSearch.html
@@ -16,7 +16,7 @@
   </div>
 
   <div class="container">
-    <form id="vForm">
+    <form action="volResults.html" id="vForm">
       <br>
       <div class="form-group row justify-content-center">
         <div class="col-md-11">
