hard coded results page

--- a/volResults.html
+++ b/volResults.html
@@ -13,7 +13,7 @@
       <div class="container">
         <!-- Header-->
         <h1 class ="title"> Volunteer Opportunities Results </h1>
-        <h4> Showing 13 Results </h4>
+        <h4> Showing 5 Results </h4>
       </div>
       <br>
     </center>
@@ -36,6 +36,92 @@
            <img src="images/solid-silver-gray-fabric_medium.jpg" width="200px"
              height="200px" alt="Image Placeholder">
            <p>
+             <h3> Volunteer Opportunity 1 </h3>
+             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+           cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+              <!--More Info -->
+                <div class="button">
+                  <a button class="btn btn-outline-primary btn-large" href="volInfo.html">More Info</a>
+                <!--Contact -->
+                  <a button class="btn btn-outline-primary btn-large" href="volContact.html">Contact Organization</a>
+                </div>
+          </p>
+          <br>
+       </div>
+
+       <hr/>
+
+       <div class = "container">
+           <img src="images/solid-silver-gray-fabric_medium.jpg" width="200px"
+             height="200px" alt="Image Placeholder">
+           <p>
+             <h3> Volunteer Opportunity 2 </h3>
+             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+           cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+              <!--More Info -->
+                <div class="button">
+                  <a button class="btn btn-outline-primary btn-large" href="volInfo.html">More Info</a>
+                <!--Contact -->
+                  <a button class="btn btn-outline-primary btn-large" href="volContact.html">Contact Organization</a>
+                </div>
+          </p>
+          <br>
+       </div>
+
+       <hr/>
+       <div class = "container">
+           <img src="images/solid-silver-gray-fabric_medium.jpg" width="200px"
+             height="200px" alt="Image Placeholder">
+           <p>
+             <h3> Volunteer Opportunity 3 </h3>
+             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+           cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+              <!--More Info -->
+                <div class="button">
+                  <a button class="btn btn-outline-primary btn-large" href="volInfo.html">More Info</a>
+                <!--Contact -->
+                  <a button class="btn btn-outline-primary btn-large" href="volContact.html">Contact Organization</a>
+                </div>
+          </p>
+          <br>
+       </div>
+
+       <hr/>
+       <div class = "container">
+           <img src="images/solid-silver-gray-fabric_medium.jpg" width="200px"
+             height="200px" alt="Image Placeholder">
+           <p>
+             <h3> Volunteer Opportunity 4 </h3>
+             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+           cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+              <!--More Info -->
+                <div class="button">
+                  <a button class="btn btn-outline-primary btn-large" href="volInfo.html">More Info</a>
+                <!--Contact -->
+                  <a button class="btn btn-outline-primary btn-large" href="volContact.html">Contact Organization</a>
+                </div>
+          </p>
+          <br>
+       </div>
+
+       <hr/>
+       <div class = "container">
+           <img src="images/solid-silver-gray-fabric_medium.jpg" width="200px"
+             height="200px" alt="Image Placeholder">
+           <p>
+             <h3> Volunteer Opportunity 5 </h3>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
             et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
             aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
