hard coded job results page

--- a/jobResults.html
+++ b/jobResults.html
@@ -4,15 +4,16 @@
   <head>
     <meta charset="utf-8">
     <title>Job Listings</title>
-    <link rel="stylesheet" type="text/css" href="css/jobResults.css">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="css/volResults.css">
   </head>
 
   <body>
     <center>
-      <div class="header" id ="Listings">
-        <br>
-        <h1 class="text-center">Job Results!</h1>
-        <hr/>
+      <div class="container">
+        <!-- Header-->
+        <h1 class ="title"> Job Opportunities Results </h1>
+        <h4> Showing 5 Results </h4>
       </div>
       <br>
     </center>
@@ -21,36 +22,131 @@
       Taken from w3schools example of how to do drop down menu
       https://www.w3schools.com/howto/howto_js_dropdown.asp-->
     <div class="dropdown">
-      <button onclick="myFunction()" class="dropbtn">Sort By</button>
-      <div id="myDropdown" class="dropdown-content">
-        <a href="#">Date</a>
-        <a href="#">A-Z</a>
-        <a href="#">Distance</a>
-      </div>
+        <button onclick="myFunction()" class="dropbtn">Sort By</button>
+        <div id="myDropdown" class="dropdown-content">
+          <a href="#">Date</a>
+          <a href="#">A-Z</a>
+          <a href="#">Distance</a>
+        </div>
     </div>
 
     <center>
       <hr/>
-      <!--More Info -->
-      <div class="button">
-        <a button class="btn btn-primary btn-large" href = "jobInfo.html">More Info</button>
-      </div>
-      <br>
+       <div class = "container">
+           <img src="images/solid-silver-gray-fabric_medium.jpg" width="200px"
+             height="200px" alt="Image Placeholder">
+           <p>
+             <h3> Job Opportunity 1 </h3>
+             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+           cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+              <!--More Info -->
+                <div class="button">
+                  <a button class="btn btn-outline-primary btn-large" href="jobInfo.html">More Info</a>
+                <!--Contact -->
+                  <a button class="btn btn-outline-primary btn-large" href="jobContact.html">Contact Organization</a>
+                </div>
+          </p>
+          <br>
+       </div>
 
-      <!--Contact -->
-      <div class="button">
-        <a button class="btn btn-primary btn-large" href = "jobContact.html">Contact</button>
-      </div>
-      <br>
+       <hr/>
+
+       <div class = "container">
+           <img src="images/solid-silver-gray-fabric_medium.jpg" width="200px"
+             height="200px" alt="Image Placeholder">
+           <p>
+             <h3> Job Opportunity 2 </h3>
+             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+           cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+              <!--More Info -->
+                <div class="button">
+                  <a button class="btn btn-outline-primary btn-large" href="jobInfo.html">More Info</a>
+                <!--Contact -->
+                  <a button class="btn btn-outline-primary btn-large" href="jobContact.html">Contact Organization</a>
+                </div>
+          </p>
+          <br>
+       </div>
+
+       <hr/>
+       <div class = "container">
+           <img src="images/solid-silver-gray-fabric_medium.jpg" width="200px"
+             height="200px" alt="Image Placeholder">
+           <p>
+             <h3> Job Opportunity 3 </h3>
+             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+           cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+              <!--More Info -->
+                <div class="button">
+                  <a button class="btn btn-outline-primary btn-large" href="jobInfo.html">More Info</a>
+                <!--Contact -->
+                  <a button class="btn btn-outline-primary btn-large" href="jobContact.html">Contact Organization</a>
+                </div>
+          </p>
+          <br>
+       </div>
+
+       <hr/>
+       <div class = "container">
+           <img src="images/solid-silver-gray-fabric_medium.jpg" width="200px"
+             height="200px" alt="Image Placeholder">
+           <p>
+             <h3> Job Opportunity 4 </h3>
+             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+           cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+              <!--More Info -->
+                <div class="button">
+                  <a button class="btn btn-outline-primary btn-large" href="jobInfo.html">More Info</a>
+                <!--Contact -->
+                  <a button class="btn btn-outline-primary btn-large" href="jobContact.html">Contact Organization</a>
+                </div>
+          </p>
+          <br>
+       </div>
+
+       <hr/>
+       <div class = "container">
+           <img src="images/solid-silver-gray-fabric_medium.jpg" width="200px"
+             height="200px" alt="Image Placeholder">
+           <p>
+             <h3> Job Opportunity 5 </h3>
+             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+           cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+              <!--More Info -->
+                <div class="button">
+                  <a button class="btn btn-outline-primary btn-large" href="jobInfo.html">More Info</a>
+                <!--Contact -->
+                  <a button class="btn btn-outline-primary btn-large" href="jobContact.html">Contact Organization</a>
+                </div>
+          </p>
+          <br>
+       </div>
 
       <!--Back to jobSearch -->
+    <hr/>
       <div class="button">
-        <a button class="btn btn-outline-primary btn-large" href="JobSearch.html">Back</button>
+        <a button class="btn btn-outline-primary btn-large" href="jobOpp.html">Back to Search</a>
       </div>
       <br>
 
     </center>
-    <script type="text/javascript" src="js/jobResults.js"></script>
+
+<script type="text/javascript" src="js/jobResults.js"></script>
 
   </body>
 </html>
