--- a/volResults.html
+++ b/volResults.html
@@ -140,7 +140,7 @@
       <!--Back to jobSearch -->
     <hr/>
       <div class="button">
-        <a button class="btn btn-outline-primary btn-large" href="volunteerOpp.html">Back to Search</a>
+        <a button class="btn btn-outline-primary btn-large" href="volunteerSearch.html">Back to Search</a>
       </div>
       <br>
 
