--- a/volResults.html
+++ b/volResults.html
@@ -137,7 +137,7 @@
           <br>
        </div>
 
-      <!--Back to jobSearch -->
+      <!--Back to volunteerSearch -->
     <hr/>
       <div class="button">
         <a button class="btn btn-outline-primary btn-large" href="volunteerSearch.html">Back to Search</a>
