--- a/signUp.html
+++ b/signUp.html
@@ -3,16 +3,50 @@
 <head>
   <title>Sign Up</title>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="css/signUp.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">  
 </head>
 <body>
-  <h1>Sign Up</h1>
-  <ul style="list-style: none;">
-    <li><a class="button" href="index.html" alt="Sign Up">
-      Sign Up</a></li>
-    <li><a class="button" href="login.html" alt="Login">
-      Login</a></li>
-    <li><a class="button" href="index.html" alt="Home">
-      Home</a></li>
-  </ul>
+  <div class="container">
+    <div class="header d-inline-block">
+    <h1>Sign Up</h1>
+    <a href="employerSubmit.html">Employer? Click here.</a>
+    </div>
+    <form action="index.html" id="signUpForm">
+      <div class="form-group form-row">
+        <div class="col">
+          <input type="text" class="form-control" placeholder="First name">
+        </div>
+        <div class="col">
+          <input type="text" class="form-control" placeholder="Last name">
+        </div>
+      </div>
+    <br>
+      <div class="form-group">
+          <input type="text" class="form-control" placeholder="Email">
+      </div>
+    <br>
+      <div class="form-group">
+          <input type="text" class="form-control" placeholder="Password">
+      </div>
+      <div class="form-group">
+          <input type="text" class="form-control" placeholder="Confirm password">
+      </div>
+      <br>
+      <div class="form-row justify-content-around">
+        <div class="col text-center">
+        <button type="button" class="btn btn-info btn-large" id="homeBtn">Home</button>
+      </div>
+        <div class="col text-center">
+        <button type="reset" class="btn btn-outline-primary btn-large" id="clearBtn">Clear</button>
+        </div>
+        <div class="col text-center">
+        <button type="button" class="btn btn-primary btn-large" id="submitBtn">Submit</button>
+        </div>
+      </div>
+    </form>
+</div>
+<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="js/signUp.js"></script>
 </body>
 </html>
