--- a/signUp.html
+++ b/signUp.html
@@ -23,14 +23,14 @@
       </div>
     <br>
       <div class="form-group">
-          <input type="text" class="form-control" placeholder="Email">
+          <input type="email" class="form-control" placeholder="Email">
       </div>
     <br>
       <div class="form-group">
-          <input type="text" class="form-control" placeholder="Password">
+          <input type="password" class="form-control" placeholder="Password">
       </div>
       <div class="form-group">
-          <input type="text" class="form-control" placeholder="Confirm password">
+          <input type="password" class="form-control" placeholder="Confirm password">
       </div>
       <br>
       <div class="form-row justify-content-around">
