--- a/jobInfo.html
+++ b/jobInfo.html
@@ -4,9 +4,10 @@
   <head>
     <meta charset="utf-8">
     <title>XXX Postion @ XXX Company</title>
-    <!--
     <link rel="stylesheet" type="text/css" href="css/jobInfo.css">
-    -->
+    <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="js/jquery.jcarousel.min.js"></script>
+    <script type="text/javascript" src="js/moreInfo.js"></script>
   </head>
 
   <body>
@@ -20,14 +21,12 @@
 
       <hr/>
       <!--Contact Employer!-->
-      <div class="button">
-        <a button class="btn btn-primary btn-large" href = "jobContact.html">Contact the Employer!</button>
-      </div>
+      <div class="links">
+        <a class="button" href = "jobContact.html">Contact the Employer!</a>
       <br>
 
       <!--Back to previous Job Listing!-->
-      <div class="button">
-        <a button class="btn btn-outline-primary btn-large" href="jobResults.html">Back!</button>
+        <a class="button" href="jobResults.html">Back!</a>
       </div>
       <br>
 
