--- a/signUp.html
+++ b/signUp.html
@@ -15,22 +15,22 @@
     <form action="index.html" id="signUpForm">
       <div class="form-group form-row">
         <div class="col">
-          <input type="text" class="form-control" placeholder="First name">
+          <input type="text" class="form-control" id="fName" placeholder="First name"> 
         </div>
         <div class="col">
-          <input type="text" class="form-control" placeholder="Last name">
+          <input type="text" class="form-control" id="lName" placeholder="Last name">
         </div>
       </div>
     <br>
       <div class="form-group">
-          <input type="email" class="form-control" placeholder="Email">
+          <input type="email" class="form-control" id="email" placeholder="Email">
       </div>
     <br>
       <div class="form-group">
-          <input type="password" class="form-control" placeholder="Password">
+          <input type="password" class="form-control" id="pass1" placeholder="Password">
       </div>
       <div class="form-group">
-          <input type="password" class="form-control" placeholder="Confirm password">
+          <input type="password" class="form-control" id="pass2" placeholder="Confirm password">
       </div>
       <br>
       <div class="form-row justify-content-around">
