--- a/jobContact.html
+++ b/jobContact.html
@@ -4,9 +4,8 @@
   <head>
     <meta charset="utf-8">
     <title>Contact the Company!</title>
-    <!--
-    <link rel="stylesheet" type="text/css" href="css/jobContact.css">
-    -->
+    <link rel="stylesheet" type="text/css" href="css/contact.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   </head>
 
   <body>
@@ -16,19 +15,38 @@
         <h1 class="text-center">Fill in information and write your message to the employer.</h1>
         <hr/>
       </div>
-      <br>
-
       <hr/>
-      <!--Back to previous Job Listing!-->
-      <div class="button">
-        <a button class="btn btn-primary btn-large" href = "jobInfo.html">Back to Job Listing</button>
-      </div>
+
+      <!--Form and Message Input-->
+      <div class="w3-container w3-dark-gray" style="max-width:500px">
+        <h4>Fill out your information to message the employer!</h2>
       <br>
+      <form class="w3-container">
+        <label><b> Name</b></label>
+        <input class="w3-input w3-border w3-light-grey" type="text">
+        <br>
+
+        <label><b>Email</b></label>
+        <input class="w3-input w3-border w3-light-grey" type="text">
+        <br>
+
+        <label><b>Phone-Number</b></label>
+        <input class="w3-input w3-border w3-light-grey" type="text">
+        <br>
+
+        <label><b>Message</b></label>
+        <textarea class="w3-input w3-border w3-light-grey" type="text" style="resize:none">
+        </textarea>
+        <br>
+      </form>
+      </div>
 
       <!-- Submit Message -->
-      <div class="button">
-        <a button class="btn btn-outline-primary btn-large" href="JobSubmission.html">Submit!</button>
-      </div>
+      <a class="submit" href="jobSubmission.html">Submit!</a>
+      <br>
+
+      <!--Back to previous Job Listing!-->
+      <a class="back" href = "jobInfo.html">Back to Job Listing</a>
       <br>
 
     </center>
