--- a/index.html
+++ b/index.html
@@ -13,30 +13,29 @@
 <body>
   <div class ="container">
     <!-- Header and main image -->
-    <h1 class ="title"> Senior Opportunities </h1>
-    <a class="button" id="signUpBtn" href="signUp.html" alt="Sign Up">
-      Sign Up</a>
-      <a class="button" id="loginBtn" href="login.html" alt="Login">
-      Login</a>
+    <div class="row header">
+    <h1> Senior Opportunities</h1>
+    <div class="col">
+      <a class="button" id="signUpBtn" href="signUp.html" alt="Sign Up">Sign Up</a>
+    </div>
+    <div class="col">
+      <a class="button" id="loginBtn" href="login.html" alt="Login">Login</a>
+    </div>
     <p>
         <h4> Giving senior citizens more ways to give back. </h4>
     </p>
   </div>
   <div class="oppContainer">
     <!-- Navigation links -->
-    <center>
       <a class="button" href="volunteerSearch.html" alt="Volunteer Opportunties">
-      Volunteer Opportuntities </a></li>
+      Volunteer Opportuntities </a>
       <a class="button" href="JobSearch.html" alt="Job Opportunities">
-       Job Opportunities </a></li>
-    </center>
-  </div>
-  <div class="employeerContainer">
-    <center>
+       Job Opportunities </a>
+       <div class="employerContainer">
       <a class="button" id="employerBtn" href="employerSubmit.html" alt="Employer? Click here.">
-        Employer?<br/>Click here.</a>
-    </center>
-  </div>
+        Employer? Click here.</a>
+      </div>
+</div>
 </body>
 </html>
 
