added submission confirmation pages for vol and job

--- a/VolunteerSubmission.html
+++ b/VolunteerSubmission.html
@@ -5,11 +5,12 @@
     <meta charset="utf-8">
     <title>Submission Success!</title>
     <link rel="stylesheet" type="text/css" href="css/Submission.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   </head>
 
   <body>
     <center>
-      <div class="header" id ="vol">
+      <div class="header" id ="volHeader">
         <br>
         <h1 class="text-center">Thank you for submitting!</h1>
         <hr/>
@@ -18,20 +19,18 @@
 
       <h3> XXX Organization wil get back to you as soon as possible!</h3>
       <hr/>
-      <div class="button">
-        <a button class="btn btn-primary btn-large" href = "volInfo.html">Back to Event Listing</button>
-      </div>
+
+      <!--Links-->
+      <div class="links">
+        <a class ="back w3-round-small" href = "volInfo.html">Back to Event Listing</a>
       <br>
 
-      <div class="button">
-        <a button class="btn btn-outline-primary btn-large" href="volResults.html">See All Listings</button>
-      </div>
+        <a class="listings w3-round-small" href="volResults.html">See All Listings</a>
       <br>
 
-      <div class="button">
-        <a button class="btn btn-primary btn-large" href="index.html">Home  </button>
-      </div>
+        <a class="home w3-round-small" id = "vol" class="btn btn-primary btn-large" href="index.html">Home</a>
       <br>
+      </div>
 
     </center>
   </body>
