--- a/JobSubmission.html
+++ b/JobSubmission.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Submission Success!</title>
     <link rel="stylesheet" type="text/css" href="css/Submission.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   </head>
 
   <body>
@@ -14,24 +15,21 @@
         <h1 class="text-center">Thank you for submitting!</h1>
         <hr/>
       </div>
-      <br>
 
       <h3> XXX Company wil get back to you as soon as possible!</h3>
       <hr/>
-      <div class="button">
-        <a button type="submit" class="btn btn-primary btn-large" href = "jobInfo.html">Back</button>
-      </div>
+
+      <!--Links-->
+      <div class="links">
+        <a class ="back w3-round-small" href = "jobInfo.html">Back to Job Listing</a>
       <br>
 
-      <div class="button">
-        <a button type="submit" class="btn btn-outline-primary btn-large" href="jobResults.html">See All Listings</button>
-      </div>
+        <a class="listings w3-round-small" href="jobResults.html">See All Listings</a>
       <br>
 
-      <div class="button">
-        <a button type="submit" class="btn btn-primary btn-large" href="index.html">Home  </button>
-      </div>
+        <a class="home w3-round-small" class="btn btn-primary btn-large" href="index.html">Home</a>
       <br>
+      </div>
 
     </center>
   </body>
