we really need to fix some of the capitalizations on these lol

--- a/jobContact.html
+++ b/jobContact.html
@@ -42,7 +42,7 @@
       </div>
 
       <!-- Submit Message -->
-      <a class="submit" href="jobSubmission.html">Submit!</a>
+      <a class="submit" href="JobSubmission.html">Submit!</a>
       <br>
 
       <!--Back to previous Job Listing!-->
