--- a/jobResults.html
+++ b/jobResults.html
@@ -140,7 +140,7 @@
       <!--Back to jobSearch -->
     <hr/>
       <div class="button">
-        <a button class="btn btn-outline-primary btn-large" href="jobSearch.html">Back to Search</a>
+        <a button class="btn btn-outline-primary btn-large" href="JobSearch.html">Back to Search</a>
       </div>
       <br>
 
