fixed unclosed div tag

--- a/index.html
+++ b/index.html
@@ -12,30 +12,27 @@
 
 <body>
   <div class ="container">
-    <!-- Header and main image -->
     <div class="row header">
-    <h1> Senior Opportunities</h1>
-    <div class="col">
-      <a class="button" id="signUpBtn" href="signUp.html" alt="Sign Up">Sign Up</a>
+      <h1> Senior Opportunities</h1>
+      <div class="col">
+        <a class="button" id="signUpBtn" href="signUp.html" alt="Sign Up">Sign Up</a>
+      </div>
+      <div class="col">
+        <a class="button" id="loginBtn" href="login.html" alt="Login">Login</a>
+      </div>
+      <p><h4>Giving senior citizens more ways to give back.</h4></p>
     </div>
-    <div class="col">
-      <a class="button" id="loginBtn" href="login.html" alt="Login">Login</a>
-    </div>
-    <p>
-        <h4> Giving senior citizens more ways to give back. </h4>
-    </p>
-  </div>
-  <div class="oppContainer">
-    <!-- Navigation links -->
+    <div class="oppContainer">
       <a class="button" href="volunteerSearch.html" alt="Volunteer Opportunties">
       Volunteer Opportuntities </a>
       <a class="button" href="JobSearch.html" alt="Job Opportunities">
        Job Opportunities </a>
        <div class="employerContainer">
-      <a class="button" id="employerBtn" href="employerSubmit.html" alt="Employer? Click here.">
+        <a class="button" id="employerBtn" href="employerSubmit.html" alt="Employer? Click here.">
         Employer? Click here.</a>
-      </div>
-</div>
+        </div>
+    </div>
+  </div>
 </body>
 </html>
 
