added page for password reset

--- a/employerSubmit.html
+++ b/employerSubmit.html
@@ -8,8 +8,9 @@
 </head>
 <body>
   <div class="container">
-  <h1>Submit a </h1>
+  <h1>Submit a Listing</h1>
   <form action="index.html" id="listingForm">
+    <label>What are you submitting?</label>
     <div class="form-row justify-content-around">
     <div class="form-check form-check-inline">
       <label class="form-check-label">
