--- a/login.html
+++ b/login.html
@@ -2,14 +2,17 @@
 <html>
 <head>
   <title>Login</title>
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css">  
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="css/login.css">  
   <meta name="viewport" content="width=device-width, initial-scale=1">  
 </head>
 <body>
   <div class="container">
-    <div class="header d-inline-block">
-    <h1>Login</h1>
-    <a href="employerSubmit.html">Employer? Click here.</a>
+    <div class="header">
+      <h1>Login</h1>
+      <a href="employerSubmit.html" id="employerBtn">Employer? Click here.</a>
+      <a class="button" href="signUp.html" id="signUpBtn">Sign up</a>
+      
     </div>
     <form action="index.html" id="loginForm">
       <div class="form-group">
@@ -19,7 +22,7 @@
       <div class="form-group">
         <label for="password">Password</label>
         <input type="password" class="form-control" id="password">
-        <a href="">Forgot your password? Click here.</a>
+        <a href="forgotPass.html">Forgot your password? Click here.</a>
       </div>
       <br>
       <div class="form-row justify-content-around">
@@ -34,8 +37,8 @@
         </div>
       </div>
     </form>
-</div>
-<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-<script type="text/javascript" src="js/login.js"></script>
+  </div>
+  <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript" src="js/login.js"></script>
 </body>
 </html>
