--- a/forgotPass.html
+++ b/forgotPass.html
@@ -15,9 +15,10 @@
     </div>
     <form action="index.html" id="forgotPassForm">
       <div class="form-group">
-        <label for="email">Email Address</label>
-        <input type="email" class="form-control" id="email">
+        <label for="email">Send a link to your email for resetting your password.</label>
+        <input type="email" class="form-control" placeholder="Email" maxlength="256" id="email">
       </div>
+       <p hidden id="accHelp">Please enter the email you used to create your account.</p>
       <br>
       <div class="form-row justify-content-around">
         <div class="col text-center">
