--- a/signUp.html
+++ b/signUp.html
@@ -13,24 +13,34 @@
     <a href="employerSubmit.html">Employer? Click here.</a>
     </div>
     <form action="index.html" id="signUpForm">
+      <legend>Create your account</legend>
+      <br>
       <div class="form-group form-row">
         <div class="col">
-          <input type="text" class="form-control" id="fName" placeholder="First name"> 
+          <input type="text" class="form-control" id="fName" placeholder="First name" aria-describedby="requiredText" maxlength="35" required>
+          <small id="requiredText" class="text-muted">required</small>
+          <p hidden class="errText" id="nameHelp">Please enter your first and last name.</p> 
         </div>
         <div class="col">
-          <input type="text" class="form-control" id="lName" placeholder="Last name">
+          <input type="text" class="form-control" id="lName" placeholder="Last name" maxlength="35">
         </div>
       </div>
-    <br>
+      <br>
       <div class="form-group">
-          <input type="email" class="form-control" id="email" placeholder="Email">
+          <input type="email" class="form-control" id="email" placeholder="Email" aria-describedby="requiredText" maxlength="256" required>
+          <small id="requiredText" class="text-muted">required</small>
+          <p hidden class="errText" id="emailHelp">Please enter a valid email to create your account.</p>
       </div>
-    <br>
+      <br>
       <div class="form-group">
-          <input type="password" class="form-control" id="pass1" placeholder="Password">
+        <p hidden class="errText" id="passHelp">Enter a password to secure your account.</p>
+          <input type="password" class="form-control" id="pass1" placeholder="Password" aria-describedby="requiredText" maxlength="120" required>
+          <small id="requiredText" class="text-muted">required</small>
       </div>
       <div class="form-group">
-          <input type="password" class="form-control" id="pass2" placeholder="Confirm password">
+        <input type="password" class="form-control" id="pass2" placeholder="Confirm password" aria-describedby="requiredText" maxlength="120" required>
+        <small id="requiredText" class="text-muted">required</small>
+        <p hidden class="errText" id="diffPass">Passwords do not match.</p>
       </div>
       <br>
       <div class="form-row justify-content-around">
