--- a/volunteerSearch.html
+++ b/volunteerSearch.html
@@ -3,20 +3,19 @@
 <html>
 <head>
   <meta charset="utf-8">
-  
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Volunteer Opportunities</title>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="css/volunteerSearch.css">
 </head>
 
 <body>
+  <div class="container">
   <div class="header">
     <a class="button" id="btnHome" href="index.html">Home</a>
     <h1 class="text-center">Volunteer Opportunities</h1>
       <hr/>
   </div>
-
-  <div class="container">
     <form action="volResults.html" id="vForm">
       <br>
       <div class="form-group row justify-content-center">
